packages/taquito-michel-codec/test/contracts_015/ill_typed/view_op_bad_name_non_printable_char.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW "\\x00" nat ; IF_SOME { } { PUSH nat 1 } ; NIL operation ; PAIR } ;
